<resources>
    <string name="app_name" translatable="false">Holy Quran</string>

    <string name="txt_arabic_font_test_imlaei" translatable="false">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيم وَآيَةٌ لَّهُمُ الْأَرْضُ الْمَيْتَةُ  وَأَخْرَجْنَا مِنْهَا حَبًّا فَمِنْهُ يَأْكُلُونَ</string>
    <string name="txt_arabic_font_test_indopak" translatable="false">بِسۡمِ اللهِ الرَّحۡمٰنِ الرَّحِيۡمِ وَاٰيَةٌ لَّهُمُ الۡاَرۡضُ الۡمَيۡتَةُ ۖۚ اَحۡيَيۡنٰهَا وَاَخۡرَجۡنَا مِنۡهَا حَبًّا فَمِنۡهُ يَاۡكُلُوۡنَ</string>
    <string name="txt_arabic_font_test_uthmani" translatable="false">بِسْمِ ٱللَّهِ ٱلرَّحْمَـٰنِ ٱلرَّحِيم وَءَايَةٌ لَّهُمُ ٱلْأَرْضُ ٱلْمَيْتَةُ أَحْيَيْنَـٰهَا وَأَخْرَجْنَا مِنْهَا حَبًّا فَمِنْهُ يَأْكُلُونَِ</string>
    <string name="txt_imlaei" translatable="false">Imlaei</string>
    <string name="txt_indopak" translatable="false">Indopak</string>
    <string name="txt_uthmani" translatable="false">Uthmani</string>
    <string name="txt_al_qalam" translatable="false">al qalam</string>
    <string name="txt_ar_othmani" translatable="false">othmani</string>
    <string name="txt_excelent_arabic" translatable="false">excelent_arabic</string>
    <string name="txt_kitab" translatable="false">kitab</string>
    <string name="txt_noorehidayat" translatable="false">noorehidayat</string>
    <string name="txt_noorehira" translatable="false">noorehira</string>
    <string name="txt_noorehuda" translatable="false">noorehuda</string>
    <string name="txt_normal" translatable="false">normal</string>
    <string name="txt_bold" translatable="false">bold</string>
    <string name="txt_italic" translatable="false">italic</string>
    <string name="txt_bold_italic" translatable="false">bold_italic</string>
    <string name="txt_languages_and_translation" translatable="false">Languages And Translations</string>
    <string name="txt_app_language" translatable="false">App Language</string>
    <string name="txt_app_translation" translatable="false">Translation</string>


    <string name="txt_fonts">Fonts</string>
    <string name="txt_theme">Theme</string>
    <string name="txt_arabic">Arabic</string>
    <string name="txt_font_size">Font Size</string>
    <string name="txt_font_script_arabic">Script</string>
    <string name="txt_font_font">Font</string>
    <string name="txt_preview">Preview</string>
    <string name="txt_style">Style</string>
    <string name="txt_translation">Translation</string>
    <string name="txt_preview_translation">This is a preview of translated Text.</string>
    <string name="txt_available_language">Available Languages</string>
    <string name="txt_current_language">Current Language</string>
    <string name="txt_restart_request">Please Restart App to apply changes...</string>
    <string name="txt_restart">Restart</string>
    <string name="txt_hello_world">Hello World!</string>
    <string name="txt_click_me">click me</string>
    <string name="txt_hi_switch">hi switch</string>
    <string name="txt_show_arabic_text">Show Arabic Text</string>
    <string name="txt_show_translation">Show Translation</string>
    <string name="txt_quran_settings">Quran Settings</string>
    <string name="txt_translation_for_quran">Translation for Quran</string>
    <string name="txt_current_translation">Current Translation</string>
    <string name="txt_available_translation">Available Translation</string>
    <string name="txt_show_primary_trans">Primary Translation</string>
    <string name="txt_show_secondary_trans">Secondary Translation</string>
    <string name="txt_select_translation_slot_desc">Select Translation Slot to apply changes...</string>
    <string name="txt_secondary">Secondary</string>
    <string name="txt_primary">Primary</string>
    <string name="txt_info">Info</string>
    <string name="txt_download_trans_details">Are your sure You want to Download :</string>
    <string name="txt_download">Download</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_change_download_path">Change Download Path</string>
    <string name="txt_download_path">Download Path:</string>
    <string name="txt_current_path">Current Path</string>
    <string name="txt_warning">Warning</string>
    <string name="txt_storage_permission_warning_desc">Storage Permission not granted. It is required if you want to use different location than system allocated Path</string>
    <string name="txt_btn_enable_storage_perm">Enable Storage Permission</string>
    <string name="txt_set_another_path">Set Another Path</string>
    <string name="txt_cant_select_path_that_contains">You can\'t select path that contains </string>
    <string name="txt_use_system_path">Use System Allocated Path</string>
    <string name="txt_choose_another">Choose Another</string>
    <string name="txt_we_dont_allow_phone_storage">You selected Phone storage. We don\'t allow to use custom folder from Phone Storage . Instead please use System Allocated Path.</string>
    <string name="txt_show_tajweed">Show Tajweed Color</string>
    <string name="txt_options">Options</string>
    <string name="txt_select_this_path">Select This Path</string>
    <string name="txt_see_files">See Files</string>
    <string name="txt_set_download_path">Set download path</string>
    <string name="txt_copy_files_to_current_path">Copy files to current path</string>
    <string name="txt_delete_everything_and_remove_path">Delete Everything And Remove Path</string>
    <string name="txt_remove_path_only_keep_files">Remove Path Only (keep files)</string>
    <string name="txt_close_menu">Close Menu</string>
    <string name="txt_done">Done</string>
    <string name="txt_system_allocated">System Allocated</string>
    <string name="txt_available_path">Available Path</string>
    <string name="txt_hidden_system_path">Hidden System Path</string>
    <string name="txt_downloaded">Downloaded :</string>
    <string name="txt_details">Details</string>
    <string name="txt_path_delete_confirmation">Everything will be deleted from this path. Are you sure you want to delete?</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_remaining">Remaining </string>
    <string name="txt_no_internet_connection">No Internet Connection!</string>
    <string name="txt_pending_downloads">Pending Downloads</string>
    <string name="txt_downloading">Downloading</string>
    <string name="txt_queued_download">In Queue</string>
    <string name="txt_download_manager">Download Manager</string>
    <string name="txt_download_started">Download Started for HolyQuran</string>
    <string name="txt_no_pending_downloads">No Pending downloads...</string>
    <string name="txt_nothing_to_show">Nothing to show</string>
    <string name="txt_batch_download">Batch Download</string>
    <string name="txt_resume_download">Resume Download</string>
    <string name="txt_download_finished">Download Finished</string>


</resources>