<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.settings.AppLanguageSettingActivity">
    <include android:id="@+id/include_title" layout="@layout/layout_back_and_title"/>

    <com.efortshub.holyquran.views.HbTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_current_language"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>


    <include
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/include_lang" layout="@layout/row_language_list_item"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <com.efortshub.holyquran.views.HbTextView
        android:id="@+id/tv_restart_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_restart_request"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <com.efortshub.holyquran.views.HbButton
        android:id="@+id/btn_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/txt_restart"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <com.efortshub.holyquran.views.HbTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_available_language"
        android:textStyle="bold"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:queryHint="Search Language..."
        app:iconifiedByDefault="false"
        android:background="@drawable/bg_button_focused"
        android:id="@+id/searchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_locales"
        android:padding="8dp"

        android:background="@drawable/bg_widget_active_border"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</androidx.appcompat.widget.LinearLayoutCompat>