<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:padding="8dp"/>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:padding="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:id="@+id/tv_download_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_downloading"
            />

        <TextView
            android:id="@+id/tv_download_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_details"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_details"/>

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_cancel"/>
    </LinearLayout>

</LinearLayout>