<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <com.efortshub.holyquran.views.HbTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txt_download"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <com.efortshub.holyquran.views.HbTextView
            android:id="@+id/tv_language_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_download_status"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.efortshub.holyquran.views.HbTextView
            android:id="@+id/tv_translation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_download_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language_name" />

        <com.efortshub.holyquran.views.HbTransparentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <com.efortshub.holyquran.views.HbButton
                android:id="@+id/btn_download_trans"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/txt_download"/>
            <com.efortshub.holyquran.views.HbButton
                android:id="@+id/btn_cancel_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/txt_cancel"/>


        </com.efortshub.holyquran.views.HbTransparentLinearLayout>

        <com.efortshub.holyquran.views.HbTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/txt_download_path"/>
        <com.efortshub.holyquran.views.HbTextView
            android:id="@+id/tv_download_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp"
            android:padding="2dp"
            android:text="file:///default"/>
        <com.efortshub.holyquran.views.HbButton
            android:id="@+id/btn_change_download_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="4dp"
            android:text="@string/txt_change_download_path"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>